@@ -17,8 +17,6 @@ a file of known signatures and reports any possible matches.
 It can also examine one or more files of signatures and find any
 matches in those files.
 Output is written to standard out and errors to standard error.
-The program only accepts the first 100MB of data presented
-via standard input.
 
 .TP
 \fB\-m <file>\fR
