@@ -4,6 +4,7 @@
 
   - Added fuzzy_set_total_input_length function to the API.
   - Added support for files up to 192GB.
+  - Added support for arbitrary length input from the standard input.
 
 * Bug Fixes
 
